--- a/lookup/Templates/base.html
+++ b/lookup/Templates/base.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Home</title>
+
+    <style>
+        .good {background-color: #0C0;}
+        .moderate {background-color: #FFFF00;}
+        .Unhealty for Sensitive Groups {background-color: #FF9900;}
+        .unhealthy {background-color: #FF0000;}
+        .veryunhealthy {background-color: #990066;}
+        .hazardous {background-color: #660000;}
+    </style>
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -27,9 +37,10 @@
 
 
     </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+        <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method="POST">
+            {% csrf_token %}
+            <input class="form-control mr-sm-2" type="search" placeholder="Enter Zipcode" aria-label="Search" name="zipcode">
+            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Look Up</button>
         </form>
     </div>
     </nav>
@@ -42,7 +53,7 @@
     {% endblock %}
 
 
-    <h1>Hello, world!</h1>
+
 
   </div>
 
